syntax = "proto3";

package relation;
option go_package = "./pb";

message User{
  int64 Id = 1;
  string Name = 2;
  int64 FollowCount = 3;
  int64 FollowerCount = 4;
  bool IsFollow = 5;
  string Avatar =6;
  string BackgroundImage =7;
  string Signature = 8;
  string TotalFavourited =9;
  int64 WorkCount =10 ;
  int64 FavouriteCount =11;
}

message FollowSubject{
int64 Id  =1;
int64 UserId = 2;
int64 FollowerId = 3;
bool IsFollow = 4;

}
message AddFollowReq {
  string UserId = 1;
  string ToUserId = 2;
}

message AddFollowResp {
  string StatusCode = 1;
  string StatusMsg = 2;
}
message DeleteFollowReq {
  string UserId = 1;
  string ToUserId = 2;
}

message DeleteFollowResp {
  string StatusCode = 1;
  string StatusMsg = 2;
}

message CheckIsFollowReq{
  string UserId = 1;
  string ToUserId = 2;
}

message CheckIsFollowResp{
  string StatusCode = 1;
  string StatusMsg = 2;
}
message GetFollowListReq {
  string Userid = 1;
  string ToUserId = 2;
}

message GetFollowListResp {
  string StatusCode = 1;
  string StatusMsg = 2;
  User UserList = 3;
}
message GetFollowerReq {
  string Userid = 1;
  string ToUserId = 2;
}

message GetFollowerResp {
  string StatusCode = 1;
  string StatusMsg = 2;
  User UserList = 3;
}
message GetFriendListReq {
  string Userid = 1;
}

message GetFriendListResp {
  string StatusCode = 1;
  string StatusMsg = 2;
  User UserList = 3;
}

service StreamGreeter {
  rpc AddFollow(AddFollowReq) returns (AddFollowResp);
  rpc DeleteFollow(DeleteFollowReq)returns(DeleteFollowResp);
  rpc GetFollowList(GetFollowListReq)returns(GetFollowListResp);
  rpc GetFollowerList(GetFollowerReq)returns(GetFollowerResp);
  rpc GetFriendList(GetFriendListReq)returns(GetFriendListResp);
}